# gtest-light

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  gtest_light.hpp
analysis/: check.cpp  check.hpp
test/: CMakeLists.txt  assert-failure.cpp  assert-success.cpp  assert_eq.cpp  call-once.cpp  expect-failure.cpp  expect-success.cpp  fixture.cpp
